# dep

./: .gitignore  BUILD.bazel  WORKSPACE
cmd/dep/: BUILD.bazel
cmd/dep/testdata/cachedir/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/excess_inputs/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/hash_mismatch/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/hash_version_mismatch/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/missing_and_excess/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/missing_inputs/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/noverify/hash_mismatch/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/noverify/hash_version_mismatch/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/noverify/missing_and_excess/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/noverify/unmet_constraint/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/noverify/unmet_override/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/noverify/vendororphans/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/unmet_constraint/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/unmet_override/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/check/vendororphans/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/all-new-double-spec/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/all-new-double/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/all-new-spec/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/all-new/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/desync/final/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/desync/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/exists-imports/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/exists-manifest-constraint/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/default/hasheq-dry/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/default/hasheq-novendor-dry/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/default/hasheq-novendor/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/default/hasheq/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/default/hashneq-vendoronly/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/empty/case1/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/empty/case2/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/empty/case3/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/noverify/hash_mismatch/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/noverify/vendororphans/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/pkg-ignored/wildcard-ignore/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/pkg-ignored/wildcard-other-root/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/update/case1/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/update/desync/final/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/update/desync/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/update/novendor/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case1/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case1/initial/foo/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case2/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case2/initial/foo/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case3/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case3/initial/foo/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case4/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case4/initial/foo/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/case1/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/case2/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/case3/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/case4/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/corrupt-glide/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/direct-trans-conflict/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/direct-trans-no-conflict/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/trans-trans-conflict/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/trans-trans-trans/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/trans-trans-unspecified/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glide/trans-trans/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/glock/case1/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/godep/case1/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/govend/case1/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/skip-hidden/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/status/missing_pkgs_lock_mismatch/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/status/old_constraints/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/status/override_constraint/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/status/revision_constraint/initial/: BUILD.bazel
cmd/dep/testdata/init/directdeps/: BUILD.bazel
cmd/dep/testdata/status/collect_constraints/: BUILD.bazel
gps/: BUILD.bazel
gps/paths/: BUILD.bazel
gps/pkgtree/: BUILD.bazel
gps/verify/: BUILD.bazel
hack/licenseok/: BUILD.bazel
internal/feedback/: BUILD.bazel
internal/fs/: BUILD.bazel
internal/importers/: BUILD.bazel
internal/importers/base/: BUILD.bazel
internal/importers/glide/: BUILD.bazel
internal/importers/glock/: BUILD.bazel
internal/importers/godep/: BUILD.bazel
internal/importers/govend/: BUILD.bazel
internal/importers/govendor/: BUILD.bazel
internal/importers/gvt/: BUILD.bazel
internal/importers/importertest/: BUILD.bazel
internal/importers/vndr/: BUILD.bazel
internal/test/integration/: BUILD.bazel
(+36 files in other folders)
