load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["paths.go"],
    importpath = "github.com/golang/dep/gps/paths",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["paths_test.go"],
    embed = [":go_default_library"],
    deps = ["//internal/test:go_default_library"],
)
