load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "digest.go",
        "dirwalk.go",
        "ignored_ruleset.go",
        "pkgtree.go",
        "reachmap.go",
    ],
    importpath = "github.com/golang/dep/gps/pkgtree",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/armon/go-radix:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "digest_test.go",
        "ignored_ruleset_test.go",
        "pkgtree_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//gps/paths:go_default_library",
        "//internal/fs:go_default_library",
        "//internal/test:go_default_library",
    ],
)
