load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["feedback.go"],
    importpath = "github.com/golang/dep/internal/feedback",
    visibility = ["//:__subpackages__"],
    deps = ["//gps:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["feedback_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//gps:go_default_library",
        "//internal/test:go_default_library",
    ],
)
