load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "testcase.go",
        "testdata.go",
    ],
    importpath = "github.com/golang/dep/internal/importers/importertest",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_default_library",
        "//gps:go_default_library",
        "//internal/test:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
