load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "testcase.go",
        "testproj.go",
    ],
    importpath = "github.com/golang/dep/internal/test/integration",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/test:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
