load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/status/collect_constraints",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/boltdb/bolt:go_default_library",
        "//vendor/github.com/sdboyer/dep-test:go_default_library",
        "//vendor/github.com/sdboyer/deptest:go_default_library",
        "//vendor/github.com/sdboyer/deptestdos:go_default_library",
    ],
)

go_binary(
    name = "collect_constraints",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
