load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["lib.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/harness_tests/init/skip-hidden/initial",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/sdboyer/deptest:go_default_library"],
)
