load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/harness_tests/check/noverify/vendororphans/initial",
    visibility = ["//visibility:private"],
    deps = ["//cmd/dep/testdata/harness_tests/check/noverify/vendororphans/initial/vendor/github.com/sdboyer/deptest:go_default_library"],
)

go_binary(
    name = "initial",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
