load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/harness_tests/init/glide/trans-trans/initial",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/ChinmayR/deptestglideA:go_default_library",
        "//vendor/github.com/ChinmayR/deptestglideB:go_default_library",
    ],
)

go_binary(
    name = "initial",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
