load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/harness_tests/init/relative_path/initial/project_dir",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/sdboyer/deptestdos:go_default_library"],
)

go_binary(
    name = "project_dir",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
