load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["samples.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/harness_tests/ensure/empty/case3/initial/samples",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/sdboyer/deptestdos:go_default_library"],
)
