load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bar.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/harness_tests/init/relative_path/initial/project_dir/foo",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/sdboyer/deptest:go_default_library"],
)
