load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/harness_tests/ensure/add/errs/self-add/case2/initial",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "initial",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
