load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["subsamples.go"],
    importpath = "github.com/golang/dep/cmd/dep/testdata/harness_tests/ensure/pkg-ignored/wildcard-ignore/initial/samples/subsamples",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/sdboyer/dep-test:go_default_library"],
)
